# pineapple

./: .dockerignore  .gitignore  Dockerfile  _tmp_chunk_0.jsonl  app.py  bc_train_result.txt  bc_train_v2_result.txt  check_joker_format.py  check_logs.py  check_turns.py  check_turns_result.txt  cleanup_vms.py  count_filtered_progress.py  count_progress.py  db_schema.txt  delete_vms.sh  deploy_filtered_v4.py  deploy_fleet.py  deploy_phase_e.py  deploy_phase_e_extra.py  deploy_phase_e_remaining.py  deploy_t1.py  extract_joker_test.py  fix_joker_json.py  render.yaml  requirements.txt  show_joker_results.py  show_local_results.py  split_extra_slices.py  start_solver.sh  stop_all.py  t0_filtered_train.jsonl  t1_mc_50k.jsonl  t1_mc_rust.jsonl  t1_rust_in.jsonl  t1_rust_out.jsonl  test_1hand_top10.csv  test_1hand_top10.jsonl  test_5hands.jsonl  test_eval.py  (+10 more)
ai/: SOLVER_STRUCTURE.md  __init__.py  analyze_data.py  avg_roy.py  (+80 more)
ai/rust_solver/: Cargo.toml
ai/rust_solver/backward/: Cargo.toml  deploy_fleet.sh  gcp_deploy.sh  gcp_t2_deep.sh
ai/rust_solver/backward/src/: main.rs
ai/rust_solver/cfr_solver/: test_topk.jsonl
ai/rust_solver/cfr_solver/src/: action_gen.rs  game_state.rs  info_set.rs  main.rs  t0_eval.rs
ai/rust_solver/cfr_solver/target2/: .rustc_info.json
ai/rust_solver/ofc_core/: Cargo.toml
ai/rust_solver/prob_engine/: Cargo.toml
ai/rust_solver/prob_engine/src/: main.rs
ai/rust_solver/src/: main.rs
ai/rust_solver/t1_gen/: Cargo.toml  local_test_5.jsonl  test.jsonl
ai/rust_solver/t1_gen/src/: main.rs
rust_solver/cfr_solver/: Cargo.toml  test_t1.jsonl
rust_solver/cfr_solver/src/: action_gen.rs  cfr_engine.rs  game_state.rs  info_set.rs  main.rs  t0_eval.rs
rust_solver/cfr_solver/target2/release/.fingerprint/anstream-578abe2cb93ae44b/: lib-anstream.json
rust_solver/cfr_solver/target2/release/.fingerprint/anstyle-parse-b69c46ed8dd89bb9/: lib-anstyle_parse
rust_solver/cfr_solver/target2/release/.fingerprint/anstyle-query-e69c0a500c8ba9a5/: lib-anstyle_query
rust_solver/fl_solver/: Cargo.toml
rust_solver/fl_solver/src/: main.rs
(+262 files in other folders)
