[package]
name = "fl_solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fl_solver"
path = "src/main.rs"

[dependencies]
rayon = "1.8"
itertools = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
