[package]
name = "fl_solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fl_solver"
path = "src/main.rs"

[dependencies]
rayon = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
